test/corpus/tags.txt
================================================================================
Autoescape
================================================================================
{% autoescape on %}
{% endautoescape %}
--------------------------------------------------------------------------------

(template
  (block
    (start_tag)
    (arguments
      (keyword))
    (body
      (text))
    (end_tag)))

================================================================================
Standalone tag
================================================================================
{% csrf_token %}
--------------------------------------------------------------------------------

(template
  (tag
    (tag_name)))

================================================================================
Filter tag
================================================================================
{% filter lower|custom:"asdf"|escape %}
  hello world
{% endfilter %}
--------------------------------------------------------------------------------

(template
  (block
    (start_tag)
    (arguments
      (arg
        (identifier)
        (filters
          (filter
            (filter_name)
            (arg
              (string)))
          (filter
            (filter_name)))))
    (body
      (text))
    (end_tag)))

================================================================================
For loop
================================================================================
{% for obj in objects|sorted %}
  {{ obj }}
{% empty %}
  Nothing to see here.
{% endfor %}
--------------------------------------------------------------------------------

(template
  (block
    (start_tag)
    (arguments
      (arg
        (identifier))
      (keyword_operator)
      (arg
        (identifier)
        (filters
          (filter
            (filter_name)))))
    (body
      (text)
      (variable
        (var_name
          (identifier)))
      (text)
      (tag
        (tag_name))
      (text))
    (end_tag)))

================================================================================
Blocks
================================================================================
{% block main %}
  {% block sub-name %}{% endblock %}
  {% block 🎉 %}{% endblock %}
{% endblock main %}
--------------------------------------------------------------------------------

(template
  (block
    (start_tag)
    (arguments
      (name))
    (body
      (text)
      (block
        (start_tag)
        (arguments
          (name))
        (end_tag))
      (text)
      (block
        (start_tag)
        (arguments
          (name))
        (end_tag))
      (text))
    (end_tag)))

================================================================================
With
================================================================================
{% with x=True y=somevar z="hello" %}
  {{ x|action:y }} with some text
  and a second line
{% endwith %}
--------------------------------------------------------------------------------

(template
  (block
    (start_tag)
    (arguments
      (kwarg
        (name)
        (arg
          (boolean)))
      (kwarg
        (name)
        (arg
          (identifier)))
      (kwarg
        (name)
        (arg
          (string))))
    (body
      (text)
      (variable
        (var_name
          (identifier))
        (filters
          (filter
            (filter_name)
            (arg
              (identifier)))))
      (text))
    (end_tag)))

================================================================================
Querystring
================================================================================
{% querystring color=None size="M" opts=somelist %}
--------------------------------------------------------------------------------

(template
  (tag
    (tag_name)
    (arguments
      (kwarg
        (name)
        (arg
          (builtin)))
      (kwarg
        (name)
        (arg
          (string)))
      (kwarg
        (name)
        (arg
          (identifier))))))

================================================================================
Templatetag
================================================================================
{% templatetag openblock %}
--------------------------------------------------------------------------------

(template
  (tag
    (tag_name)
    (arguments
      (keyword))))

================================================================================
Verbatim
================================================================================
{% verbatim %}
  {{if dying}}Still alive.{{/if}}
  {% with x=1 %}
{% endverbatim %}
--------------------------------------------------------------------------------

(template
  (block
    (start_tag)
    (body
      (text))
    (end_tag)))

================================================================================
Empty verbatim tag
================================================================================
{% verbatim %}{% endverbatim %}
--------------------------------------------------------------------------------

(template
  (block
    (start_tag)
    (end_tag)))

================================================================================
Verbatim with spaced end tag
================================================================================
{% verbatim %}
  {% if this_is_not_parsed %}
{%   endverbatim%}
--------------------------------------------------------------------------------

(template
  (block
    (start_tag)
    (body
      (text))
    (end_tag)))
