test/corpus/variables.txt
================================================================================
Variable filter
================================================================================
{{ timestamp|date:"Ymd"|escape:True }}
--------------------------------------------------------------------------------

(template
  (variable
    (var_name
      (identifier))
    (filters
      (filter
        (filter_name)
        (arg
          (string)))
      (filter
        (filter_name)
        (arg
          (boolean))))))

================================================================================
Extraneous brackets
================================================================================
This is {plain text} and {{ this }} is a variable.
--------------------------------------------------------------------------------

(template
  (text)
  (variable
    (var_name
      (identifier)))
  (text))

======
Empty string
======
{{ some.var|default_if_none:"" }}
------
(template
  (variable
    (var_name
      (identifier))
    (filters
      (filter
        (filter_name)
        (arg
          (string))))))
